infra/k8s/prod/neo4j-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: neo4j
spec:
  template:
    spec:
      containers:
        - name: neo4j
          resources:
            limits:
              memory: "4Gi"
              cpu: "2000m"
