infra/k8s/prod/zipkin-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin
spec:
  template:
    spec:
      containers:
        - name: zipkin
